[package]
name = "near-jsonrpc-client"
version = "0.2.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-jsonrpc-client-rs"
description = "Lower-level API for interfacing with the NEAR Protocol via JSONRPC"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["near", "api", "jsonrpc", "rpc", "async"]
rust-version = "1.56.0"

[dependencies]
thiserror = "1.0.28"

reqwest = { version = "0.11.4", features = ["json"] }
lazy_static = "1.4.0"

borsh = "0.9"
serde = "1.0.127"
serde_json = "1.0.66"

near-primitives = { git = "https://github.com/near/nearcore", branch = "master" }
near-chain-configs = { git = "https://github.com/near/nearcore", branch = "master" }
near-jsonrpc-primitives = { git = "https://github.com/near/nearcore", branch = "master" }

[dev-dependencies]
near-crypto = { git = "https://github.com/near/nearcore", branch = "daniyar/jsonrpc-primitives-debug" }
tokio = { version = "1.1", features = ["rt", "macros"] }

[features]
any = []
sandbox = []
adversarial = []
